add three section

--- a/index.html
+++ b/index.html
@@ -63,28 +63,41 @@
                     <h3>I'm </h3>
                     <p>I'm a Software Engineering Undergraduate at the University of Kelaniya.
                         I'm mainly focusing on Java, ReactJS, and Spring boot. I like to learn new technologies and adepts to them in a short period of time. </p>
+                        <p>I am 3rd year software engineering
+                            undergraduate looking for an internship
+                            as a software engineer. I'm passionate
+                            about learning new techniques and new
+                            things. I am able to deal with different
+                            types of people and work together as a
+                            team with good team spirit. I want to
+                            shape my career as well as my future by
+                            fulfilling the corporate needs of the
+                            company with my education and
+                            contributing positively to the industry
+                            and society.
+                            </p>
                 </div>
            </div>
 
         </section>
 
+        <!--................................................. -->
+
         <section class="section-three" id="section-three">
             <h1 id="new"><br>New</h1>
 
+            <div class="section-three-edu">
+                <div>
+                <div class="section-three-edu-header">
+                </div>
 
-            <div class="accordion-item">
-                <div class="accordion-item-hea">
-                What is Web Development?
                 </div>
-                <div class="accordion-item-body">
-                <div class="accordion-item-body-content">
-                    Web Development broadly refers to the tasks associated with developing functional websites and applications for the Internet. The web development process includes web design, web content development, client-side/server-side scripting and network security configuration, among other tasks.
-                </div>
-                </div>
+
             </div>
 
             <h2>edrftgyhujiko</h2>
         </section>
+        <!--..........................................................-->
 
         <section class="section-four" id="section-four">
             <h1 id="new"><br>New</h1>
