add toggle in section 3

--- a/index.html
+++ b/index.html
@@ -91,7 +91,19 @@
                 
                 <div class="section-three-edu-item">
                     <div class="section-three-edu-header">
-                    
+                        Academic Qualifications
+                    </div>
+                    <div class="section-three-edu-body">
+                    <div class="section-three-edu-body-content">
+                        <h4>University of Kelaniya
+                        Bsc(Hons)Software Engineering 2021-Present</h4>
+                        <p>Current GPA : 1.9263/4</p>
+                        <p>
+                            <br>
+                        Major in Net-Centric Application Development, Mobile
+                        Computing Application Development,Business Engineering
+                        </p>
+                    </div>
                     </div>          
 
                 </div>
