add project toggles

--- a/index.html
+++ b/index.html
@@ -151,6 +151,77 @@
 
         <section class="section-four" id="section-four">
             <h1 id="Contact"><br>Project</h1>
+            <di class="project">
+
+                <div class="project-my">
+
+
+                    <h3>Frontend</h3>
+                    <input type="checkbox" id="project-my-toggle">
+                    <label for="project-my-toggle">Open Overlay</label>
+                    <dialog >
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa nihil dolore similique quis qui ad blanditiis ex eum! Enim maiores ipsam fugiat officiis earum distinctio natus reprehenderit aliquam est iusto!
+                        </p>
+                        <label for="project-my-toggle">close overlay</label>
+                    </dialog>
+                    <div class="project-poto">
+                        <img src="./New folder/img/background 2.jpeg" alt="my-poto">
+                    </div>
+                </div>
+
+                <div class="project-my">
+
+
+                    <h3>Frontend</h3>
+                    <input type="checkbox" id="project-my-toggle">
+                    <label for="project-my-toggle">Open Overlay</label>
+                    <dialog >
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa nihil dolore similique quis qui ad blanditiis ex eum! Enim maiores ipsam fugiat officiis earum distinctio natus reprehenderit aliquam est iusto!
+                        </p>
+                        <label for="project-my-toggle">close overlay</label>
+                    </dialog>
+                    <div class="project-poto">
+                        <img src="./New folder/img/background 2.jpeg" alt="my-poto">
+                    </div>
+                </div>
+                <div class="project-my">
+
+
+                    <h3>Frontend</h3>
+                    <input type="checkbox" id="project-my-toggle">
+                    <label for="project-my-toggle">Open Overlay</label>
+                    <dialog >
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa nihil dolore similique quis qui ad blanditiis ex eum! Enim maiores ipsam fugiat officiis earum distinctio natus reprehenderit aliquam est iusto!
+                        </p>
+                        <label for="project-my-toggle">close overlay</label>
+                    </dialog>
+                    <div class="project-poto">
+                        <img src="./New folder/img/background 2.jpeg" alt="my-poto">
+                    </div>
+                </div>
+                <div class="project-my">
+
+
+                    <h3>Frontend</h3>
+                    <input type="checkbox" id="project-my-toggle">
+                    <label for="project-my-toggle">Open Overlay</label>
+                    <dialog >
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa nihil dolore similique quis qui ad blanditiis ex eum! Enim maiores ipsam fugiat officiis earum distinctio natus reprehenderit aliquam est iusto!
+                        </p>
+                        <label for="project-my-toggle">close overlay</label>
+                    </dialog>
+                    <div class="project-poto">
+                        <img src="./New folder/img/background 2.jpeg" alt="my-poto">
+                    </div>
+                </div>
+                
+
+
+            </di>
             
         </section>
 
