add the contact in contact section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./New folder/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel='stylesheet'>
     <script src="./New folder/scripts.js"defer></script>
 </head>
 <body>
@@ -239,20 +239,39 @@
             <div class="contact-my">
 
                 <div class="contact-my-con">
-                    <div>
-                        fghjkml,
+                    <div class="logo">
+                        <i class='bx bx-phone bx-lg'></i>
 
-                    </div>
-                    <div>
-                        fghjkl;
+                    </div >
+
+                    
+                    <div class="con-my">
+                        0715808356
 
                     </div>
                 </div>
                 <div class="contact-my-con">
-                    dftgyhuji
+                    <div class="logo">
+                        <i class='bx bx-envelope bx-lg' ></i>
+
+                    </div >
+                    <div class="con-my">
+                        udeshidumina@gmail.com
+
+                    </div>
                 </div>
                 <div class="contact-my-con">
-                    dftgyhuji
+                    <div class="logo">
+                        <i class='bx bx-home-circle bx-lg'  ></i>
+
+                    </div >
+                    <div class="con-my">
+                        No.121,<br>
+                        Mathugama Road,<br>
+                        Pilaminawaththa,<br>
+                        Dodamgoda.
+
+                    </div>
                 </div>
              </div>   
 
