--- a/index.html
+++ b/index.html
@@ -150,8 +150,64 @@
         <!--...................section four Project.......................................-->
 
         <section class="section-four" id="section-four">
-            <h1 id="Contact"><br>Project</h1>
+            <h1 id="Contact"><br>Project</h1>            
             <div class="project">
+             <!---------------------------------------Frontend Development--------------------------------->
+                <div class="project-my">
+                    <h3>Frontend Development</h3>
+                    <input type="checkbox" id="project-my-toggle">
+                    <label for="project-my-toggle">Open Overlay</label>
+                    <dialog >
+                        <div class="dialog-box">
+                            <div class="dialog-box-project">
+                                <div class="dialog-box-project-text">
+                                    <h3>Name : Ferfume</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum porro consequatur rerum commodi sunt! Tempore tempora iure, est qui optio rerum! Doloribus voluptatum totam amet facere cupiditate, hic ducimus architecto.</p>
+                                </div>
+                                <div class="dialog-box-project-gitlink">
+                                    <a href="https://github.com/WAUdeshinduminaweerakoon/Ferfume.git"><i class='bx bxl-github bx-lg'></i></a>
+                                </div>
+                            </div>
+                         <!-------------------------------------------------------------------------------------->
+                            <div class="dialog-box-project">
+                                <div class="dialog-box-project-text">
+                                    <h3>Name : Profile-web (on going)</h3>
+                                    <p>Using Html ,Css and js</p>
+
+                                </div>
+                                <div class="dialog-box-project-gitlink">
+                                    <a href="https://github.com/WAUdeshinduminaweerakoon/Profile-Web.git"><i class='bx bxl-github bx-lg'></i></a>
+                                </div>
+                            </div>
+                         <!----------------------------------------------------------------------------------------->            
+                            <!-- <div class="dialog-box-project">
+                                <div class="dialog-box-project-text">
+                                    <h3>Name : Ferfume</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum porro consequatur rerum commodi sunt! Tempore tempora iure, est qui optio rerum! Doloribus voluptatum totam amet facere cupiditate, hic ducimus architecto.</p>
+                                </div>
+                                <div class="dialog-box-project-gitlink">
+                                    <a href="https://github.com/WAUdeshinduminaweerakoon/Ferfume.git"><i class='bx bxl-github bx-lg'></i></a>
+                                </div>
+                            </div> -->
+                         <!---------------------------------------------------------------------------------------->            
+                            <!-- <div class="dialog-box-project">
+                                <div class="dialog-box-project-text">
+                                    <h3>Name : Ferfume</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum porro consequatur rerum commodi sunt! Tempore tempora iure, est qui optio rerum! Doloribus voluptatum totam amet facere cupiditate, hic ducimus architecto.</p>
+                                </div>
+                                <div class="dialog-box-project-gitlink">
+                                    <a href="https://github.com/WAUdeshinduminaweerakoon/Ferfume.git"><i class='bx bxl-github bx-lg'></i></a>
+                               </div>
+                            </div> -->
+                         <!----------------------------------------------------------------------------------------->
+                        </div> 
+                        <label for="project-my-toggle">close overlay</label>
+                    </dialog>
+                    <div class="project-poto">
+                        <img src="./New folder/img/background 2.jpeg" alt="my-project-poto">
+                    </div>
+                </div>
+             <!---------------------------------------Full-stack Development------------------------------->                
 
                 <div class="project-my">
                     <h3>Frontend</h3>
@@ -207,7 +263,7 @@
                         <img src="./New folder/img/background 2.jpeg" alt="my-project-poto">
                     </div>
                 </div>
-
+             <!---------------------------------------Mobile Development----------------------------------->                
                 <div class="project-my">
                     <h3>Frontend</h3>
                     <input type="checkbox" id="project-my-toggle">
@@ -262,60 +318,7 @@
                         <img src="./New folder/img/background 2.jpeg" alt="my-project-poto">
                     </div>
                 </div>
-                <div class="project-my">
-                    <h3>Frontend</h3>
-                    <input type="checkbox" id="project-my-toggle">
-                    <label for="project-my-toggle">Open Overlay</label>
-                    <dialog >
-                        <div class="dialog-box">
-                            <div class="dialog-box-project">
-                                <div class="dialog-box-project-text">
-                                    <h3>Name : Ferfume</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum porro consequatur rerum commodi sunt! Tempore tempora iure, est qui optio rerum! Doloribus voluptatum totam amet facere cupiditate, hic ducimus architecto.</p>
-                                </div>
-                                <div class="dialog-box-project-gitlink">
-                                    <a href="https://github.com/WAUdeshinduminaweerakoon/Ferfume.git"><i class='bx bxl-github bx-lg'></i></a>
-                                </div>
-                            </div>
-                <!-------------------------------------------------------------------------------------->
-                            <div class="dialog-box-project">
-                                <div class="dialog-box-project-text">
-                                    <h3>Name : Ferfume</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum porro consequatur rerum commodi sunt! Tempore tempora iure, est qui optio rerum! Doloribus voluptatum totam amet facere cupiditate, hic ducimus architecto.</p>
-
-                                </div>
-                                <div class="dialog-box-project-gitlink">
-                                    <a href="https://github.com/WAUdeshinduminaweerakoon/Ferfume.git"><i class='bx bxl-github bx-lg'></i></a>
-                                </div>
-                            </div>
-                <!----------------------------------------------------------------------------------------->            
-                            <div class="dialog-box-project">
-                                <div class="dialog-box-project-text">
-                                    <h3>Name : Ferfume</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum porro consequatur rerum commodi sunt! Tempore tempora iure, est qui optio rerum! Doloribus voluptatum totam amet facere cupiditate, hic ducimus architecto.</p>
-                                </div>
-                                <div class="dialog-box-project-gitlink">
-                                    <a href="https://github.com/WAUdeshinduminaweerakoon/Ferfume.git"><i class='bx bxl-github bx-lg'></i></a>
-                                </div>
-                            </div>
-                <!---------------------------------------------------------------------------------------->            
-                            <div class="dialog-box-project">
-                                <div class="dialog-box-project-text">
-                                    <h3>Name : Ferfume</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum porro consequatur rerum commodi sunt! Tempore tempora iure, est qui optio rerum! Doloribus voluptatum totam amet facere cupiditate, hic ducimus architecto.</p>
-                                </div>
-                                <div class="dialog-box-project-gitlink">
-                                    <a href="https://github.com/WAUdeshinduminaweerakoon/Ferfume.git"><i class='bx bxl-github bx-lg'></i></a>
-                               </div>
-                            </div>
-                <!----------------------------------------------------------------------------------------->
-                        </div> 
-                        <label for="project-my-toggle">close overlay</label>
-                    </dialog>
-                    <div class="project-poto">
-                        <img src="./New folder/img/background 2.jpeg" alt="my-project-poto">
-                    </div>
-                </div>
+             <!---------------------------------------Other Development------------------------------------>                
                 <div class="project-my">
                     <h3>Frontend</h3>
                     <input type="checkbox" id="project-my-toggle">
