Other Development added the myos project

--- a/index.html
+++ b/index.html
@@ -234,11 +234,11 @@
                         <div class="dialog-box">
                             <div class="dialog-box-project">
                                 <div class="dialog-box-project-text">
-                                    <h3>Name : Ferfume</h3>
+                                    <h3>Name : Age-Calculator</h3>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum porro consequatur rerum commodi sunt! Tempore tempora iure, est qui optio rerum! Doloribus voluptatum totam amet facere cupiditate, hic ducimus architecto.</p>
                                 </div>
                                 <div class="dialog-box-project-gitlink">
-                                    <a href="https://github.com/WAUdeshinduminaweerakoon/Ferfume.git"><i class='bx bxl-github bx-lg'></i></a>
+                                    <a href="https://github.com/WAUdeshinduminaweerakoon/Age-Calculator.git"><i class='bx bxl-github bx-lg'></i></a>
                                 </div>
                             </div>
                 <!-------------------------------------------------------------------------------------->
@@ -263,22 +263,23 @@
                 </div>
              <!---------------------------------------Other Development------------------------------------>                
                 <div class="project-my">
-                    <h3>Frontend</h3>
+                    <h3>Other Development</h3>
                     <input type="checkbox" id="project-my-toggle4">
                     <label for="project-my-toggle4">Open Overlay</label>
                     <dialog >
                         <div class="dialog-box">
                             <div class="dialog-box-project">
                                 <div class="dialog-box-project-text">
-                                    <h3>Name : Ferfume</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum porro consequatur rerum commodi sunt! Tempore tempora iure, est qui optio rerum! Doloribus voluptatum totam amet facere cupiditate, hic ducimus architecto.</p>
+                                    <h3>Name :Myos</h3>
+                                    <p>How to develop your own OS — Part#1   <a href=https://medium.com/@udeshidumina/how-to-develop-your-own-os-part-1-1049c3b08644> medium</a></p><br>
+                                    <p>How to develop your OS — Part2#      <a href="https://medium.com/@udeshidumina/how-to-develop-your-own-os-part2-365f682e4c4"> medium</a></p>
                                 </div>
                                 <div class="dialog-box-project-gitlink">
-                                    <a href="https://github.com/WAUdeshinduminaweerakoon/Ferfume.git"><i class='bx bxl-github bx-lg'></i></a>
+                                    <a href="https://github.com/WAUdeshinduminaweerakoon/Myos.git"><i class='bx bxl-github bx-lg'></i></a>
                                 </div>
                             </div>
                 <!-------------------------------------------------------------------------------------->
-                            <div class="dialog-box-project">
+                            <!-- <div class="dialog-box-project">
                                 <div class="dialog-box-project-text">
                                     <h3>Name : Fesfge</h3>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum porro consequatur rerum commodi sunt! Tempore tempora iure, est qui optio rerum! Doloribus voluptatum totam amet facere cupiditate, hic ducimus architecto.</p>
@@ -287,7 +288,7 @@
                                 <div class="dialog-box-project-gitlink">
                                     <a href="https://github.com/WAUdeshinduminaweerakoon/Ferfume.git"><i class='bx bxl-github bx-lg'></i></a>
                                 </div>
-                            </div>
+                            </div> -->
                 <!----------------------------------------------------------------------------------------->
                         </div> 
                         <label for="project-my-toggle4">close overlay</label>
