add the work-experience and modifiy the css adding

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="content">
         <section class="section-one" id="section-one">
             <div class="my-home">
-                <h1 id="home">Home</h1>
+                <h1 id="home"></h1>
                 <div class="grid">
                     <div class="my-poto">
                         <img src="./New folder/img/my-poto.jpg" alt="my-poto">
@@ -38,7 +38,9 @@
                     <div>
                         <h2>Udesh Indumina</h2>
                         <h4>Software Engineering Undergraduate</h4>
-                        <p>I am a creative Full-stack developer,passionate about continuous learning</p>  
+                        <p><h3><b>Hello! </b></h3></p>
+                            <p><b>I'm </b> Indumin, a passionate third-year undergraduate student pursuing a degree in Software Engineering. With a love for technology and a fascination for problem-solving, I am on a journey to master the art of crafting efficient and elegant software solutions.
+                        </p>  
                     </div>
                     <div>
                         <h3>
@@ -63,21 +65,9 @@
                 </div>
                 <div class="about-text">
                     <h3>I'm </h3>
-                    <p>I'm a Software Engineering Undergraduate at the University of Kelaniya.
-                        I'm mainly focusing on Java, ReactJS, and Spring boot. I like to learn new technologies and adepts to them in a short period of time. </p>
-                        <p>I am 3rd year software engineering
-                            undergraduate looking for an internship
-                            as a software engineer. I'm passionate
-                            about learning new techniques and new
-                            things. I am able to deal with different
-                            types of people and work together as a
-                            team with good team spirit. I want to
-                            shape my career as well as my future by
-                            fulfilling the corporate needs of the
-                            company with my education and
-                            contributing positively to the industry
-                            and society.
-                        </p>
+                    <p>Hello! I'm Udesh Indumin, a passionate third-year undergraduate student pursuing a degree in Software Engineering. With a love for technology and a fascination for problem-solving, I am on a journey to master the art of crafting efficient and elegant software solutions. </p><br>
+                        <p>My love for computers began when I first laid hands on a keyboard. After high school, that curiosity developed into a passion for software engineering. From coding my first "Hello World" program to delving into complex algorithms and data structures, every step of the journey has been a fascinating learning experience.
+                        </p><br><p>Coding is my strength, and I believe in holistic development. Outside of the digital realm, you can find me exploring the outdoors, practicing mindfulness through meditation, and enjoying a good book. I believe these experiences enrich my creativity and provide a balanced perspective.</p>
                 </div>
            </div>
 
@@ -135,7 +125,9 @@
                             </div>
                             <div class="section-three-eduAndWork-body">
                             <div class="section-three-eduAndWork-body-content">
-                                <h4> fgg</h4>
+                                <h4>Deputy Heard Prefect</h4>
+                                 <h5> Miriswaththa National School</h5><b>
+                                <h4 >HeadPrefect of Dhamma School</h4>
 
                             <p></p> 
                                 <p>
