--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
            
             
         </div>
+
         </div>
 
 
@@ -88,26 +89,22 @@
                             </div>
                             <div class="section-three-eduAndWork-body">
                             <div class="section-three-eduAndWork-body-content">
-                                <h4>University of Kelaniya
+                                <div><h4>University of Kelaniya
                                     Bsc(Hons)Software Engineering 2021-Present</h4>
-                                    <p>Current GPA : 1.9263/4</p>
-                                    <p>
+                                    <p>Current GPA : 1.9263<br>
                                     Major in Net-Centric Application Development, Mobile
                                     Computing Application Development,Business Engineering
-                                    </p><br>
-                                <h4>Dodamgoda Miriswaththa National School
-                                    GCE A/L-2019
+                                    </p><br></div>
+                                    <div>
+                                <h4>Dodamgoda Miriswaththa National School-GCE A/L-2019
                                     </h4>
-                                <p></p>
-                                <p>
                                     combine Mathematics :- B<br>
                                     Physics             :- C<br>
                                     Chemistry           :- A<br>
                                     Z-Score             :- 1.3000
-                                </p><br>
-                                <h4>Dodamgoda Miriswaththa National School
-                                    GCE O/L -2014</h4>
-                                    <p> 5As, 3Bs and 1Ss</p>  
+                                </div><div>
+                                <h4>Dodamgoda Miriswaththa National School-GCE O/L -2014</h4>
+                                    <p> 5As, 3Bs and 1Ss</p></div>  
                             </div>
                             </div>          
 
