delet the height and add css color

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    
     <header class="nav-bar">
         <div class="heard" id="Heard">
-           <h1>Udesh Portfolio</h1>
+           <div class="h-name"><h1>Udesh Portfolio</h1></div>
         <div class="nav-bar-link" id="Mynav-bar-link">
             <div class="link"><a class="active" href="#Heard">Home</a></div>
             <div class="link"><a href="#section-two">About</a></div>
@@ -59,7 +59,7 @@
         </section>
 
         <section class="section-two" id="section-two">
-            <h1 id="news"><br>About Me</h1>
+            <div class="about-h"><h1 id="news"><br>About Me</h1></div>
            <div class="section-two-grid">
                 <div class="about-poto">
                     <img src="./New folder/img/my-poto.jpg" alt="my-poto">
@@ -97,11 +97,11 @@
                                     </p><br></div>
                                     <div>
                                 <h4>Dodamgoda Miriswaththa National School-GCE A/L-2019
-                                    </h4>
+                                    </h4><p>
                                     combine Mathematics :- B<br>
                                     Physics             :- C<br>
                                     Chemistry           :- A<br>
-                                    Z-Score             :- 1.3000
+                                    Z-Score             :- 1.3000</p>
                                 </div><div>
                                 <h4>Dodamgoda Miriswaththa National School-GCE O/L -2014</h4>
                                     <p> 5As, 3Bs and 1Ss</p></div>  
@@ -145,8 +145,9 @@
         .
         </section>
         <!--...................section four Project.......................................-->
-
+<div></div>
         <section class="section-four" id="section-four">
+            <div class="mymy">sdxfcg</div>
             <h1 id="Contact"><br>Project</h1>            
             <div class="project">
              <!---------------------------------------Frontend Development--------------------------------->
