changing Htm,css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="nav-bar">
         <div class="heard" id="Heard">
-           <div class="h-name"><h1>Udesh Portfolio</h1></div>
+           <div class="h-name"><h1>Full-stack Developer</h1></div>
             <div class="nav-bar-link" id="Mynav-bar-link">
                 <div class="link"><a class="active" href="#Heard">Home</a></div>
                 <div class="link"><a href="#section-two">About</a></div>
