--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                         <h3>I'm </h3>
                         <p>Hello! I'm Udesh Indumin, a passionate third-year undergraduate student pursuing a degree in Software Engineering. With a love for technology and a fascination for problem-solving, I am on a journey to master the art of crafting efficient and elegant software solutions. </p><br>
                          <p>My love for computers began when I first laid hands on a keyboard. After high school, that curiosity developed into a passion for software engineering. From coding my first "Hello World" program to delving into complex algorithms and data structures, every step of the journey has been a fascinating learning experience.
-                        </p><br><p>Coding is my strength, and I believe in holistic development. Outside of the digital realm, you can find me exploring the outdoors, practicing mindfulness through meditation, and enjoying a good book. I believe these experiences enrich my creativity and provide a balanced perspective.</p>
+                        </p><br>
+                        <p>Coding is my strength, and I believe in holistic development. Outside of the digital realm, you can find me exploring the outdoors, practicing mindfulness through meditation, and enjoying a good book. I believe these experiences enrich my creativity and provide a balanced perspective.</p>
                     </div>
                 </div>
             </section>
@@ -79,7 +80,8 @@
                                     <div class="section-three-eduAndWork-body-content">
                                         <div><h4>University of Kelaniya
                                             Bsc(Hons)Software Engineering 2021-Present</h4>
-                                            <p>Current GPA : 1.9263<br>
+                                            <p>Current GPA : 2.3102
+                                                <br>
                                             Major in Net-Centric Application Development, Mobile
                                             Computing Application Development,Business Engineering
                                             </p><br>
